{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 116,
  "lineage": "2bc61fec-4a0e-8e92-3250-443c11c3f551",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mygw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:515571880581:internet-gateway/igw-078eef7053ccc85a8",
            "id": "igw-078eef7053ccc85a8",
            "owner_id": "515571880581",
            "tags": {
              "Name": "gateway_tf"
            },
            "tags_all": {
              "Name": "gateway_tf"
            },
            "vpc_id": "vpc-06efbe8ac6ecabd28"
          },
          "dependencies": [
            "aws_vpc.ntirevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:515571880581:route-table/rtb-0dac6c58af5ff54fb",
            "id": "rtb-0dac6c58af5ff54fb",
            "owner_id": "515571880581",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-06efbe8ac6ecabd28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ntirevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:515571880581:route-table/rtb-0df00af70302b67f4",
            "id": "rtb-0df00af70302b67f4",
            "owner_id": "515571880581",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-078eef7053ccc85a8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-06efbe8ac6ecabd28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mygw",
            "aws_vpc.ntirevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "appassociations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063291ff3f7ecf8fd",
            "route_table_id": "rtb-0dac6c58af5ff54fb",
            "subnet_id": "subnet-077fb962895862be4"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.my_subnet",
            "aws_vpc.ntirevpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf06ffb56039d4fa",
            "route_table_id": "rtb-0dac6c58af5ff54fb",
            "subnet_id": "subnet-098df05125f435e74"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.my_subnet",
            "aws_vpc.ntirevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webassociations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fedd1647e0ddc9b4",
            "route_table_id": "rtb-0df00af70302b67f4",
            "subnet_id": "subnet-02a3d9ecb0a4786d8"
          },
          "dependencies": [
            "aws_internet_gateway.mygw",
            "aws_route_table.public",
            "aws_subnet.my_subnet",
            "aws_vpc.ntirevpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0871a314fab33fbe8",
            "route_table_id": "rtb-0df00af70302b67f4",
            "subnet_id": "subnet-05e5e2cbdff80f6ae"
          },
          "dependencies": [
            "aws_internet_gateway.mygw",
            "aws_route_table.public",
            "aws_subnet.my_subnet",
            "aws_vpc.ntirevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "websg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:515571880581:security-group/sg-0e6b8aca803be946f",
            "description": "allow ssh and tcp ports",
            "egress": [],
            "id": "sg-0e6b8aca803be946f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port 22 open",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port 80 open",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "websg",
            "name_prefix": "",
            "owner_id": "515571880581",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow ssh and http ports"
            },
            "tags_all": {
              "Name": "allow ssh and http ports"
            },
            "timeouts": null,
            "vpc_id": "vpc-06efbe8ac6ecabd28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ntirevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:515571880581:subnet/subnet-02a3d9ecb0a4786d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-02a3d9ecb0a4786d8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515571880581",
            "tags": {
              "Name": "web1"
            },
            "tags_all": {
              "Name": "web1"
            },
            "vpc_id": "vpc-06efbe8ac6ecabd28"
          },
          "dependencies": [
            "aws_vpc.ntirevpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:515571880581:subnet/subnet-05e5e2cbdff80f6ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-05e5e2cbdff80f6ae",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515571880581",
            "tags": {
              "Name": "web2"
            },
            "tags_all": {
              "Name": "web2"
            },
            "vpc_id": "vpc-06efbe8ac6ecabd28"
          },
          "dependencies": [
            "aws_vpc.ntirevpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:515571880581:subnet/subnet-077fb962895862be4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-077fb962895862be4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515571880581",
            "tags": {
              "Name": "app1"
            },
            "tags_all": {
              "Name": "app1"
            },
            "vpc_id": "vpc-06efbe8ac6ecabd28"
          },
          "dependencies": [
            "aws_vpc.ntirevpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:515571880581:subnet/subnet-098df05125f435e74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-098df05125f435e74",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515571880581",
            "tags": {
              "Name": "app2"
            },
            "tags_all": {
              "Name": "app2"
            },
            "vpc_id": "vpc-06efbe8ac6ecabd28"
          },
          "dependencies": [
            "aws_vpc.ntirevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ntirevpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:515571880581:vpc/vpc-06efbe8ac6ecabd28",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0f0e6293161370838",
            "default_route_table_id": "rtb-0b34770c507b33a75",
            "default_security_group_id": "sg-0759bac5b5afd28cc",
            "dhcp_options_id": "dopt-804ad8eb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06efbe8ac6ecabd28",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b34770c507b33a75",
            "owner_id": "515571880581",
            "tags": {
              "Name": "ntire_vpc_tf"
            },
            "tags_all": {
              "Name": "ntire_vpc_tf"
            }
          }
        }
      ]
    }
  ]
}